# vault-ansible

./: .gitignore  .yamllint.yml  README.md  inventory.ini  playbook.yml  playbook_unninstall.yml  pyproject.toml
.github/workflows/: main.yml
molecule/default/: molecule.yml
roles/vault/tasks/: main.yml
roles/vault/vars/: main.yml
roles/vault_unninstall/tasks/: main.yml
roles/vault_unninstall/templates/: vault.hcl.j2  vault.service.j2
roles/vault_unninstall/vars/: main.yml
