[project]
name = "vault-estudos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=11.4.0",
    "ansible-lint>=25.1.3",
    "docker>=7.1.0",
    "molecule>=25.3.1",
    "python-docker>=0.2.0",
    "yamllint>=1.37.0",
]
